# get_resas

./: .env_sample  .gitignore  README.md  pyproject.toml
.dlt/: config.toml  secrets.toml.sample
src/get_resas/: __init__.py  api_client.py  main.py
src/get_resas/config/: cities.py  ltc_analysis.py  medical_analysis.py  medical_patient_flow.py  population_change_detail.py  population_change_rate.py  population_composition.py  population_future.py  population_natural.py  population_pyramid.py  population_society.py  population_society_timeseries.py  wages_by_age_industry.py
src/get_resas/jobs/: get_cities_job.py
src/get_resas/pipelines/: __init__.py  cities_pipeline.py  common_master_api_pipeline.py  common_master_pipeline.py  ltc_analysis_pipeline.py  medical_analysis_pipeline.py  medical_patient_flow_pipeline.py  population_change_detail_pipeline.py  population_change_rate_pipeline.py  population_composition_pipeline.py  population_future_pipeline.py  population_natural_pipeline.py  population_pyramid_pipeline.py  population_society_pipeline.py  population_society_timeseries_pipeline.py  wages_by_age_industry.py
src/get_resas/utils/: base_models.py  common_config.py  extract_master_table.py  extract_secondary_medical_code_list.py  get_city_code.py  get_industries_code.py  get_insurer_code.py  get_ltc_service_category.py  get_medical_injury_classification.py  get_pref_code.py  get_secondary_medical_code.py  logger.py  medical_doctor_classification.csv
tests/get_resas/utils/: test_get_city_code.py  test_get_ltc_service_category.py  (+1 more)
(+23 files in other folders)
