[project]
name = "get-resas"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "K-Oxon", email = "ko1011qfp@gmail.com" }]
dependencies = [
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
    "pandas>=2.2.2",
    "dlt[bigquery]>=0.5.1",
    "google-cloud-bigquery-storage>=2.25.0",
    "bs4>=0.0.2",
    "lxml>=5.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
get-resas = "get_resas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "ruff>=0.5.1",
    "pytest>=8.2.2",
    "streamlit>=1.36.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/get_resas"]
